<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.proposal.mhs.ProposalMahasiswaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:theme="@style/MySchoolToolbarTheme"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/activity_classroom_detail_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:text="@string/proposal"
                android:lines="1"
                android:ellipsize="end"
                android:textColor="@color/toolbarFontColor"
                android:fontFamily="@font/airbnb_cereal_medium" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_proposal_mhs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:cardBackgroundColor="#F0F0F0"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <TableLayout
                android:id="@+id/tablelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp">

                    <TextView
                        android:id="@+id/lbl_topik_proposal"
                        style="@style/MySchool.TextAppearance.Title1"
                        android:text="@string/topik_proposal"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_topik_proposal"
                        style="@style/MySchool.TextAppearance.Title1"
                        android:layout_marginStart="10dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp">

                    <TextView
                        android:id="@+id/lbl_konsentrasi"
                        style="@style/MySchool.TextAppearance.Title1"
                        android:text="@string/konsentrasi"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_konsentrasi"
                        style="@style/MySchool.TextAppearance.Title1"
                        android:layout_marginStart="10dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp">

                    <TextView
                        android:id="@+id/lbl_tahunpengajuan"
                        style="@style/MySchool.TextAppearance.Title1"
                        android:text="@string/tahun_pengajuan"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_tahun_pengajuan"
                        style="@style/MySchool.TextAppearance.Title1"
                        android:layout_marginStart="10dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp">

                    <TextView
                        android:id="@+id/lbl_pembimbing"
                        style="@style/MySchool.TextAppearance.Title1"
                        android:text="@string/pembimbing"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_pembimbing"
                        style="@style/MySchool.TextAppearance.Title1"
                        android:layout_marginStart="10dp"
                        tools:text="-"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp">

                    <TextView
                        android:id="@+id/lbl_status"
                        style="@style/MySchool.TextAppearance.Title1"
                        android:text="@string/status"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_status_proposal"
                        style="@style/MySchool.TextAppearance.Title1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp">

                    <TextView
                        android:id="@+id/lbl_penguji"
                        style="@style/MySchool.TextAppearance.Title1"
                        android:text="@string/penguji"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_penguji"
                        style="@style/MySchool.TextAppearance.Title1"
                        android:layout_marginStart="10dp"
                        tools:text="-"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp">

                    <TextView
                        android:id="@+id/lbl_nilai"
                        style="@style/MySchool.TextAppearance.Title1"
                        android:text="@string/nilai"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_nilai"
                        style="@style/MySchool.TextAppearance.Title1"
                        android:layout_marginStart="10dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/lbl_judul_prop"
                        style="@style/MySchool.TextAppearance.Title1"
                        android:text="@string/judul_proposal"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_judul_proposal"
                        style="@style/MySchool.TextAppearance.Title1"
                        android:layout_marginStart="10dp" />
                </TableRow>
            </TableLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabProposal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:theme="@style/CustomFabTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabDetailProposal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_detail"
            android:theme="@style/CustomFabThemeSecondary"
            android:visibility="gone"
            app:fabSize="mini"
            app:layout_constraintBottom_toTopOf="@+id/fabProposal"
            app:layout_constraintEnd_toEndOf="@+id/fabProposal"
            app:layout_constraintStart_toStartOf="@+id/fabProposal" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabSeminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_book"
            android:theme="@style/CustomFabThemeSecondary"
            android:visibility="gone"
            app:fabSize="mini"
            app:layout_constraintBottom_toTopOf="@+id/fabDetailProposal"
            app:layout_constraintEnd_toEndOf="@+id/fabDetailProposal"
            app:layout_constraintStart_toStartOf="@+id/fabDetailProposal" />

        <ProgressBar
            android:id="@+id/progress_bar_proposal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDetail"
            style="@style/MySchool.TextAppearance.Title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/detail"
            android:visibility="gone"

            app:layout_constraintBottom_toBottomOf="@+id/fabDetailProposal"
            app:layout_constraintEnd_toStartOf="@+id/fabDetailProposal"
            app:layout_constraintTop_toTopOf="@+id/fabDetailProposal" />

        <TextView
            android:id="@+id/tvSeminar"
            style="@style/MySchool.TextAppearance.Title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/seminar"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/fabSeminar"
            app:layout_constraintEnd_toStartOf="@+id/fabSeminar"
            app:layout_constraintTop_toTopOf="@+id/fabSeminar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>